-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.3.0
-
Qt Creator 3.3
Qt 5.4
KDE 4.11.5
OpenSuse 13.1 x64
When Qt Creator theme is set to dark and fonts changed to white/pale, background color in window of Context Help(F1) still white.
I don't think anyone can read white font on white background. =)
- replaces
-
QTCREATORBUG-13745 Background in help is white in dark theme
-
- Closed
-
- resulted from
-
QTCREATORBUG-13300 Foreground color is not inherited in the help window.
-
- Closed
-