Use always black as the foreground color in HelpViewer

Our css styling assumes black as the background color.
Task-number: QTCREATORBUG-13660
Change-Id: Ia8d76c39c970b436a0ae038191d8d0f8f8728ded
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>